# consulta-cnpj

./: .gitignore  LICENSE  README.md  pyproject.toml
src/consulta_cnpj/: cli.py  config.py  main.py
src/consulta_cnpj/models/: atividade.py  consulta_cnpj_result.py  empresa.py  regime_tributario.py  socio.py
src/consulta_cnpj/services/: cnpj_processor_service.py  receita_ws_client.py
src/consulta_cnpj/ui/: gui.py  main_window.py  ui_worker.py
src/consulta_cnpj/utils/: excel_reader.py  excel_writer.py
