[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "consulta-cnpj"
version = "0.1.0"
description = "Ferramenta desktop para triagem inicial de CNPJs"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alceu Pantoni" }
]

dependencies = [
    "pandas",
    "requests",
    "openpyxl",
    "pyside6"
]

[project.scripts]
consulta-cnpj = "consulta_cnpj.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
